fix: overflow

--- a/src/assets/components/_spacing.scss
+++ b/src/assets/components/_spacing.scss
@@ -7,9 +7,6 @@
 .max-w-448 {
   max-width: rem(448);
 }
-.w-50 {
-  width: 50%;
-}
 .h32 {
   height: rem(32);
 }
